# vim: set noexpandtab:

2014-01-17 Steve
	* Changed default value of susyFinalState to 0 to be consistent with SUSYTools

2013-12-26 Davide
	* Tagging SusyCommon-00-01-04

2013-12-14 Steve
	* Turned off photon selection, which needs updates for SUSYTools-00-03-14.
	  I don't think we need photon selection now anyways

2013-12-11 Steve
	* Cleaned up methods that calculate systematic shift factors for ele, mu, jets

2013-11-06 Steve
	* Update pileup file to default file for both mc12a and mc12b: PileupReweighting/mc12ab_defaults.prw.root
	* Updates for SUSYTools-00-03-09
		* Tau SFs now in TauCorrUncert/TauSF
	* Cleaned up some code

2013-10-28 Steve
	* Merged SusyCommon-00-01-03-branch into trunk
		* Update to MC12b pileup reweighting file

2013-10-04 Davide
	* Add etcone20 to Lepton

2013-09-24 Davide
	* Add "DG_MeadePoint" to the list of known susy-sample patterns

2013-08-19 Davide
	* Add secondary vertex mass to Jet

2013-08-16 Davide
	* Add emfrac to Jet
	* Add truth indices for ttbar truth

2013-07-24 Davide
	* Bugfix hasSusyProp -> cut++

2013-07-07 Steve
	* Changed default MET to Default in SusyD3PDAna
	* Added flag for controlling met muon Eloss correction, set to false by default
	* Added shifted pileup weights for pileup sys
	* Set newD3PD flag to true for taus in SUSYTools
	* Tagging SusyCommon-00-01-03

2013-07-06 Matt
	* Saving met weights for the jets.

2013-07-02 Matt
	* Saving sumet for met and various met terms.

2013-06-20 Steve
	* Fixed GRL path, added error check for GRL reader problems
	* Fixed access of mc channel_number in data
	* Tagging SusyCommon-00-01-02

2013-06-20 Davide
	* Add the counters to correct for events with the SUSY propagator bug
	* Tagging SusyCommon-00-01-01

2013-06-19 Steve
	* Tagging SusyCommon-00-01-00

2013-06-18 Steve
	* Update for p1512: jet.sumPtTrk -> jet.sumPtTrk_pv0_500MeV

2013-06-18 Steve
	* Tagging SusyCommon-00-00-74

2013-06-17 Steve
	* Updated tau eta cut to 2.47

2013-06-14 Steve