@@ -26,7 +26,7 @@ SusyNtMaker::SusyNtMaker() : m_fillNt(true),
                              m_filterTrigger(false),
                              m_saveContTaus(false),
                              m_isWhSample(false),
-                             m_hDecay(-1),
+                             m_hDecay(0),
                              m_hasSusyProp(false)
 {
   n_base_ele=0;
@@ -261,9 +261,14 @@ bool SusyNtMaker::selectEvent()
   // Susy final state - NOTE: DEFAULT VALUE CHANGED FROM -1 TO 0
   m_susyFinalState = m_isSusySample ? m_susyObj.finalState(d3pd.evt.SUSY_Spart1_pdgId(), 
                                                            d3pd.evt.SUSY_Spart2_pdgId()) : 0;
-  m_hDecay = m_isWhSample ? WhTruthExtractor().update(d3pd.truth.pdgId(),
-						      d3pd.truth.child_index(),
-						      d3pd.truth.parent_index()) : -1;
+  //m_hDecay = m_isWhSample ? WhTruthExtractor().update(d3pd.truth.pdgId(),
+  //                                                    d3pd.truth.child_index(),
+  //                                                    d3pd.truth.parent_index()) : 0;
+  m_hDecay = WhTruthExtractor::kUnknown;
+  if(m_isWhSample) m_hDecay = WhTruthExtractor().update(d3pd.truth.pdgId(), 
+                                                        d3pd.truth.child_index(), 
+                                                        d3pd.truth.parent_index());
+
   m_hasSusyProp = (m_isSusySample ?
                    SusyNtTools::eventHasSusyPropagators(*d3pd.truth.pdgId(), *d3pd.truth.parent_index()) :
                    false);
